# ChangeLog for x11-misc/xlockmore
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.89 2010/12/28 01:29:46 ranger Exp $

  28 Dec 2010; Brent Baude <ranger@gentoo.org> xlockmore-5.31.ebuild:
  stable ppc64, bug 347845

  21 Dec 2010; Markos Chandras <hwoarang@gentoo.org> xlockmore-5.31.ebuild:
  Stable on amd64 wrt bug #347845

  08 Dec 2010; Jeroen Roovers <jer@gentoo.org> xlockmore-5.31.ebuild:
  Stable for HPPA PPC (bug #347845).

  07 Dec 2010; Thomas Kahle <tomka@gentoo.org> xlockmore-5.31.ebuild:
  x86 stable per bug 347845

  10 Oct 2010; Ulrich Mueller <ulm@gentoo.org> xlockmore-5.28.ebuild,
  xlockmore-5.29.1.ebuild, xlockmore-5.31.ebuild:
  Fix openmotif dependency.

  29 Jun 2010; Markos Chandras <hwoarang@gentoo.org> xlockmore-5.31.ebuild:
  Drop obsolete X flag from IUSE

*xlockmore-5.31 (29 Jun 2010)

  29 Jun 2010; Markos Chandras <hwoarang@gentoo.org> +xlockmore-5.31.ebuild,
  +files/xlockmore-5.31-configure.in.patch,
  +files/xlockmore-5.31-ldflags.patch:
  Version bump to 5.31. Use patch to respect ldflags

  14 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  xlockmore-5.29.1.ebuild, +files/xlockmore-5.29.1-configure.in.patch:
  Remove extra CC and CXX checks from configure.in to avoid #285262.

  14 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  xlockmore-5.29.1.ebuild:
  Install as setuid with USE="-pam" wrt #290315.

*xlockmore-5.29.1 (14 Feb 2010)

  14 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xlockmore-5.29.1.ebuild:
  Version bump wrt #301053 by Tim Harder.

  10 Aug 2009; Tobias Klausmann <klausman@gentoo.org> xlockmore-5.28.ebuild:
  Stable on alpha, bug #266937

  23 Jul 2009; Joseph Jezak <josejx@gentoo.org> xlockmore-5.28.ebuild:
  Marked ppc/ppc64 stable.

  22 Jul 2009; Tobias Klausmann <klausman@gentoo.org> xlockmore-5.28.ebuild:
  Keyworded on alpha, bug #277004

  12 Jul 2009; Tobias Heinlein <keytoaster@gentoo.org>