@@ -6,6 +6,6 @@ DIST xlockmore-5.29.1.tar.bz2 1938941 RMD160 8ade29e088de990c4dffcaa721fe4cc359c
 DIST xlockmore-5.31.tar.bz2 1973498 RMD160 17f5e71f395aac1e9a99b438904b87943fb1cc15 SHA1 41b9fddb8fded906283c3b91c04e5586fc26af75 SHA256 4cd777a8b81840900fed4354af6d140b8555966aef31825508272802e4866b85
 EBUILD xlockmore-5.28.ebuild 2114 RMD160 a87ef91c7fbe8a8cd89cbf3854175d36cc186edf SHA1 0e36ee0edbea2600bea4f40d56065b99219f7bc0 SHA256 1efe9f8cc89a4913e46e884d7c8a5dc34c9b896a3efd3162c405d2c371918e70
 EBUILD xlockmore-5.29.1.ebuild 2216 RMD160 3b3f86ce0de175ff202e9a7d5fe35e7d501c81cb SHA1 fef4da9b4af253bed2878220c5745459b096652a SHA256 e23b4bb581d70db86457e6ade55d2303f2c9d6f936238ab6a18157949453ca23
-EBUILD xlockmore-5.31.ebuild 2253 RMD160 aada0a7f1b980fa0cb8ad1d1c4f51f7682a3d674 SHA1 19927df97f5c5b30395c24f2e412fa4f80f869d4 SHA256 5151fd9d9e3d4816f1aaa02d669f878b8736e15817b0e4f9cc7963cb23defa56
-MISC ChangeLog 13626 RMD160 1f2b2ebf23085bd5564b36df63713ef1bced9e33 SHA1 df9f0768ad547e9b01ac0a114a91b3241b6ae4aa SHA256 9cb3e75e1c41c61a7fbe131461e5f2ba71e30abb70b23f2fc644b7190300623f
+EBUILD xlockmore-5.31.ebuild 2254 RMD160 25838a79e53e09989d8557f2a142c0cdb5f29904 SHA1 a27f97831456f5603eb44421de01011990833682 SHA256 60ec1cd1f7c1a16de07a8af7ce5363ed613a53b27f5dd253337a4989ea1c004b
+MISC ChangeLog 13737 RMD160 97384a9a13f22a88c25627eb78efea05526597fa SHA1 1c5d0a5b5cc49fcb9658ebb94cf6149e4d999919 SHA256 cc37d0435366842681615830aeae27074c42f1c71255beaf8d4eb4b16d4a7011
 MISC metadata.xml 255 RMD160 c753cd3fbccd65b2fe478946948a5dd6afef371a SHA1 744a7bf93879f458df34c7bf8483f34f92e76782 SHA256 23193825c01ae6c6d66fd3604398bc108f0d263706c1842600f1ce6718128a4b
