@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xlockmore/xlockmore-5.31.ebuild,v 1.7 2010/12/28 01:29:46 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xlockmore/xlockmore-5.31.ebuild,v 1.8 2011/01/02 20:42:16 klausman Exp $
 
 EAPI=2
 inherit autotools eutils flag-o-matic pam
@@ -11,7 +11,7 @@ SRC_URI="http://ftp.tux.org/pub/tux/bagleyd/${PN}/${P}/${P}.tar.bz2"
 
 LICENSE="BSD GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 hppa ppc ppc64 ~sparc x86"
+KEYWORDS="alpha amd64 hppa ppc ppc64 ~sparc x86"
 IUSE="crypt debug esd gtk motif nas opengl pam truetype xinerama xlockrc"
 
 RDEPEND="x11-libs/libX11
